# pet-service

./: .gitignore  main.py  pet_service.db  pyproject.toml  requirements.txt
app/api/v1/: couple.py  pets.py
app/auth/: appwrite_auth.py  dependencies.py  dev_auth.py
app/clients/: appwrite_client.py
app/core/: config.py
app/db/: session.py
app/dependencies/: couple.py
app/models/: __init__.py  couple.py  pet.py  pet_state.py
app/repositories/: pet_repository.py
app/schemas/: couple.py  couple_schema.py  pet.py  pet_schema.py
app/services/: appwrite_service.py  couple_service.py  pet_service.py
